# smartcard-identifier

./: .gitignore  Makefile  README.md  pyproject.toml
macOS/: com.shortstorybox.SmartcardIdentifier.plist  distribution.xml
macOS/scripts/: postinstall  preinstall
src/: smartcard_identifier.py
